--- a/app/src/main/res/menu/car_import.xml
+++ b/app/src/main/res/menu/car_import.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/action_refresh"
-        app:showAsAction="ifRoom"
         android:title="Refresh"
-        android:icon="@drawable/ic_action_refresh" />
+        android:icon="@drawable/ic_action_refresh"
+        android:showAsAction="ifRoom" />
 </menu>
