--- a/app/src/main/res/layout/inputform_consumption.xml
+++ b/app/src/main/res/layout/inputform_consumption.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -26,7 +25,6 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/addconsumption_content"
             android:layout_marginStart="5dp"
-            android:layout_marginLeft="5dp"
             android:text="@string/date_picker_header"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -36,11 +34,10 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textViewDateLine"
-            android:layout_marginLeft="6dp"
             android:layout_marginStart="6dp"
             android:layout_marginTop="6dp"
-            android:inputType="none"
-            android:singleLine="true"
+            android:hint="@string/cons_date_hint"
+            android:inputType="date"
             android:textSize="22sp"
             android:textStyle="bold" />
 
@@ -49,7 +46,6 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/datumTextLine"
-            android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
             android:text="@string/km_input_header"
             android:textSize="18sp"
@@ -70,7 +66,6 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/cons_km_input"
-            android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
             android:text="@string/liter_input_header"
             android:textSize="18sp"
@@ -90,7 +85,6 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/cons_liter_input"
-            android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
             android:text="@string/price_input_header"
             android:textSize="18sp"
