--- a/app/src/main/res/layout/layout_car_view.xml
+++ b/app/src/main/res/layout/layout_car_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:padding="6dip">
-    
+
     <ImageView
         android:id="@+id/brand_icon"
         android:contentDescription="@string/brand_icon_description"
@@ -14,20 +14,17 @@
         android:layout_marginRight="6dp"
         android:layout_marginLeft="6dp" />
 
-    <TextView  
+    <TextView
         android:id="@+id/numberplateLine"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" 
+        android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textColor="#444444"
-        android:layout_toRightOf="@id/brand_icon"
         android:layout_toEndOf="@id/brand_icon"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:singleLine="true"
-        android:layout_marginStart="6dp"
-        android:layout_marginLeft="6dp" />
+        android:layout_marginStart="6dp" />
 
     <TextView
         android:id="@+id/typeLine"
@@ -36,15 +33,12 @@
 		android:textColor="#000000"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/brand_icon"
         android:layout_toEndOf="@id/brand_icon"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:layout_above="@id/numberplateLine"
         android:layout_alignWithParentIfMissing="true"
-        android:gravity="center_vertical" 
-        android:layout_marginStart="6dp" 
-        android:layout_marginLeft="6dp" />
+        android:gravity="center_vertical"
+        android:layout_marginStart="6dp" />
 
 </RelativeLayout>
