--- a/app/src/main/res/menu/car_menubar.xml
+++ b/app/src/main/res/menu/car_menubar.xml
@@ -1,20 +1,15 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-		<!-- item android:id="@+id/action_search"
-        	android:icon="@drawable/ic_action_search"
-			android:title="@string/action_search"/> -->
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 		<item android:id="@+id/action_edit_entry"
-			android:icon="@drawable/ic_action_edit"
+			android:icon="@drawable/ic_edit_white_24dp"
 			android:title="@string/action_edit_entry"
-            android:showAsAction="ifRoom" />
-
-		<item android:id="@+id/action_add_consumption"
-			android:icon="@drawable/ic_action_new"
-			android:title="@string/action_add_consumption" />
+            app:showAsAction="ifRoom" />
 
 		<item android:id="@+id/action_view_consumptions"
 			android:icon="@drawable/ic_action_search"
-			android:title="@string/action_view_consumptions" />
+			android:title="@string/action_view_consumptions"
+            app:showAsAction="ifRoom" />
 
 		<item android:id="@+id/action_view_chart"
 			android:icon="@drawable/chart_area"
